--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" />
+    tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/btnChargeMobile_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="خرید شارژ تلفن همراه"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.41000003" />
+
+    <Button
+        android:id="@+id/btnFixedLine_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="استعلام خط ثابت"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/btnChargeMobile_main"
+        app:layout_constraintStart_toStartOf="@+id/btnChargeMobile_main"
+        app:layout_constraintTop_toBottomOf="@+id/btnChargeMobile_main"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
